// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Welcome renders change password correctly 1`] = `
.c6 {
  height: 80px;
}

.c7 {
  min-height: 50px;
  width: 100%;
  border: none;
  border-radius: 5px;
  font-family: 'Libre Franklin',sans-serif;
  font-size: 1rem;
  padding-left: 10px;
  opacity: 0.9;
  border: 1px solid transparent;
}

.c7:focus {
  outline: none border:1px solid;
}

.c5 {
  width: 100%;
}

.c8 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  width: 100%;
}

.c8:hover {
  opacity: 0.90;
}

.c8:focus {
  outline: none;
}

.c8:active {
  opacity: 0.80;
}

.c8:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c9 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid;
  margin-top: 16px;
  width: 100%;
}

.c9:hover {
  opacity: 0.90;
}

.c9:focus {
  outline: none;
}

.c9:active {
  opacity: 0.80;
}

.c9:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c0 {
  height: 100%;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: grid;
  justify-items: center;
  -webkit-column-gap: 50px;
  column-gap: 50px;
  height: 90%;
  max-height: 650px;
  margin: 100px;
  grid-template-rows: [heading] 1fr [title] 1fr [content] 4fr;
  grid-template-columns: [img] 1fr [content] 1fr;
}

.c3 {
  grid-row: title;
  grid-column: content;
}

.c4 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  width: 100%;
  max-width: 400px;
  height: 350px;
  grid-row: content;
  grid-column: content;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  grid-column: img;
  grid-row: 2 / 4;
  width: 75%;
  max-width: 800px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (max-width:47.9375em) {
  .c1 {
    grid-template-columns: [content] 1fr;
    grid-template-rows: [title] 1fr [content] 4fr [footer] 1fr;
    margin: 20px 20px 0px 20px;
  }
}

@media (max-width:47.9375em) {
  .c4 {
    box-shadow: none;
  }
}

@media (max-width:47.9375em) {
  .c2 {
    grid-column: 1;
    grid-row: footer;
    width: 100%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <img
      className="c2"
      src={[Function]}
    />
    <h1
      className="c3"
    >
      Change your password
    </h1>
    <div
      className="c4"
    >
      <form
        className="c5"
        onSubmit={[Function]}
      >
        <div
          className="c6"
        >
          <input
            className="c7"
            name="oldPassword"
            onChange={[Function]}
            placeholder="Current password"
            type="password"
            value=""
          />
        </div>
        <div
          className="c6"
        >
          <input
            className="c7"
            name="password"
            onChange={[Function]}
            placeholder="New password"
            type="password"
            value=""
          />
        </div>
        <div
          className="c6"
        >
          <input
            className="c7"
            name="passwordConfirm"
            onChange={[Function]}
            placeholder="Confirm new password"
            type="password"
            value=""
          />
        </div>
        <button
          className="c8"
          disabled={true}
        >
          Change password
        </button>
        <button
          className="c9"
          id="logoutButton"
          onClick={[Function]}
        >
          Cancel and logout
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`Welcome renders login correctly 1`] = `
.c8 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c8:hover {
  opacity: 0.90;
}

.c8:focus {
  outline: none;
}

.c8:active {
  opacity: 0.80;
}

.c8:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c6 {
  height: 80px;
}

.c7 {
  min-height: 50px;
  width: 100%;
  border: none;
  border-radius: 5px;
  font-family: 'Libre Franklin',sans-serif;
  font-size: 1rem;
  padding-left: 10px;
  opacity: 0.9;
  border: 1px solid transparent;
}

.c7:focus {
  outline: none border:1px solid;
}

.c5 {
  height: 75%;
  display: grid;
  grid-template-rows: auto;
  grid-row-gap: 40px;
}

.c0 {
  height: 100%;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: grid;
  justify-items: center;
  -webkit-column-gap: 50px;
  column-gap: 50px;
  height: 90%;
  max-height: 650px;
  margin: 100px;
  grid-template-rows: [heading] 1fr [title] 1fr [content] 4fr;
  grid-template-columns: [img] 1fr [content] 1fr;
}

.c3 {
  grid-row: title;
  grid-column: content;
}

.c4 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  width: 100%;
  max-width: 400px;
  height: 350px;
  grid-row: content;
  grid-column: content;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  grid-column: img;
  grid-row: 2 / 4;
  width: 75%;
  max-width: 800px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (max-width:47.9375em) {
  .c1 {
    grid-template-columns: [content] 1fr;
    grid-template-rows: [title] 1fr [content] 4fr [footer] 1fr;
    margin: 20px 20px 0px 20px;
  }
}

@media (max-width:47.9375em) {
  .c4 {
    box-shadow: none;
  }
}

@media (max-width:47.9375em) {
  .c2 {
    grid-column: 1;
    grid-row: footer;
    width: 100%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <img
      className="c2"
      src={[Function]}
    />
    <h1
      className="c3"
    >
      Log in to Apollo
    </h1>
    <div
      className="c4"
    >
      <form
        className="c5"
        onSubmit={[Function]}
      >
        <div
          className="c6"
        >
          <input
            className="c7"
            name="username"
            onChange={[Function]}
            placeholder="Username"
            type="username"
            value=""
          />
        </div>
        <div
          className="c6"
        >
          <input
            className="c7"
            name="password"
            onChange={[Function]}
            placeholder="Password"
            type="password"
            value=""
          />
        </div>
        <button
          className="c8"
        >
          Log in
        </button>
      </form>
    </div>
  </div>
</div>
`;
